--- a/app/globals.css
+++ b/app/globals.css
@@ -32,19 +32,14 @@ body {
   }
 }
 
-@keyframes fadeInOut {
+@keyframes explode {
   0% {
-    opacity: 0;
-    transform: scale(0.5);
-  }
-
-  50% {
     opacity: 1;
-    transform: scale(1);
+    transform: scale(1) translate(0, 0);
   }
 
   100% {
     opacity: 0;
-    transform: scale(0.5);
+    transform: scale(2) translate(50px, -50px);
   }
 }
